force-app/main/default/objects/Survey_Configuration__c/Survey_Configuration__c.object-meta.xml
<CustomObject>
    <label>Survey Configuration</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Survey Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>