force-app/main/default/objects/Survey_Configuration__c/fields/Answer_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Answer_Sequence__c</fullName>
    <label>Answer Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>