force-app/main/default/objects/Survey_Configuration__c/fields/AnswerID__c.field-meta.xml
<CustomField>
    <fullName>AnswerID__c</fullName>
    <description>Feed Outbound</description>
    <formula>Answer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AnswerID</label>
    <type>Text</type>
</CustomField>