force-app/main/default/objects/Survey_Configuration__c/fields/AnswerText__c.field-meta.xml
<CustomField>
    <fullName>AnswerText__c</fullName>
    <formula>Answer__r.Answer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AnswerText</label>
    <type>Text</type>
</CustomField>