force-app/main/default/objects/Survey_Configuration__c/fields/CommentRequired__c.field-meta.xml
<CustomField>
    <fullName>CommentRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CommentRequired</label>
    <type>Checkbox</type>
</CustomField>