force-app/main/default/objects/Survey_Configuration__c/fields/CommentRequiredFeed__c.field-meta.xml
<CustomField>
    <fullName>CommentRequiredFeed__c</fullName>
    <description>Feed Outbound.</description>
    <formula>IF( CommentRequired__c , &apos;REQUIRED&apos;, &apos;OPTIONAL&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CommentRequiredFeed</label>
    <type>Text</type>
</CustomField>