force-app/main/default/objects/Survey_Configuration__c/fields/End_Question__c.field-meta.xml
<CustomField>
    <fullName>End_Question__c</fullName>
    <defaultValue>false</defaultValue>
    <label>End Question</label>
    <type>Checkbox</type>
</CustomField>