force-app/main/default/objects/Survey_Configuration__c/fields/MultiAnswers__c.field-meta.xml
<CustomField>
    <fullName>MultiAnswers__c</fullName>
    <description>Feed Outbound.</description>
    <formula>IF(QuestionFrom__r.MultiAnswers__c==&apos;1&apos;, &apos;YES&apos;, &apos;NO&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MultiAnswers</label>
    <type>Text</type>
</CustomField>