force-app/main/default/objects/Survey_Configuration__c/fields/PMAnswerID__c.field-meta.xml
<CustomField>
    <fullName>PMAnswerID__c</fullName>
    <formula>TExt(Answer__r.PMAnswerID__c)</formula>
    <label>PMAnswerID</label>
    <type>Text</type>
</CustomField>