force-app/main/default/objects/Survey_Configuration__c/fields/PMQuestionID__c.field-meta.xml
<CustomField>
    <fullName>PMQuestionID__c</fullName>
    <description>Feed Outbound .</description>
    <formula>TEXT(QuestionFrom__r.PMQuestionID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PMQuestionID</label>
    <type>Text</type>
</CustomField>