force-app/main/default/objects/Survey_Configuration__c/fields/Question_Required__c.field-meta.xml
<CustomField>
    <fullName>Question_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Question Required</label>
    <type>Checkbox</type>
</CustomField>