force-app/main/default/objects/Survey_Configuration__c/fields/QuestionFrom__c.field-meta.xml
<CustomField>
    <fullName>QuestionFrom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QuestionFrom</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Survey Configurations</relationshipLabel>
    <relationshipName>Survey_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>