force-app/main/default/objects/Survey_Configuration__c/fields/QuestionFromText__c.field-meta.xml
<CustomField>
    <fullName>QuestionFromText__c</fullName>
    <formula>QuestionFrom__r.Question__c</formula>
    <label>QuestionFromText</label>
    <type>Text</type>
</CustomField>