force-app/main/default/objects/Survey_Configuration__c/fields/QuestionID__c.field-meta.xml
<CustomField>
    <fullName>QuestionID__c</fullName>
    <description>Feed Outbound</description>
    <formula>QuestionFrom__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QuestionID</label>
    <type>Text</type>
</CustomField>