force-app/main/default/objects/Survey_Configuration__c/fields/QuestionRequiredFeed__c.field-meta.xml
<CustomField>
    <fullName>QuestionRequiredFeed__c</fullName>
    <description>Feed Outbound</description>
    <formula>IF(Question_Required__c, &apos;YES&apos;, &apos;NO&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QuestionRequiredFeed</label>
    <type>Text</type>
</CustomField>