force-app/main/default/objects/Survey_Configuration__c/fields/QuestionTo__c.field-meta.xml
<CustomField>
    <fullName>QuestionTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QuestionTo</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Survey Configurations (QuestionTo)</relationshipLabel>
    <relationshipName>Survey_Configurations1</relationshipName>
    <type>Lookup</type>
</CustomField>