force-app/main/default/objects/Survey_Configuration__c/fields/QuestionToID__c.field-meta.xml
<CustomField>
    <fullName>QuestionToID__c</fullName>
    <description>Feed Outbound.</description>
    <formula>QuestionTo__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QuestionToID</label>
    <type>Text</type>
</CustomField>