force-app/main/default/objects/Survey_Configuration__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <description>Identifier of what section the question will be grouped</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Section</label>
    <length>2</length>
    <type>Text</type>
</CustomField>