force-app/main/default/objects/Survey_Configuration__c/fields/Starting_Question__c.field-meta.xml
<CustomField>
    <fullName>Starting_Question__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Starting Question</label>
    <type>Checkbox</type>
</CustomField>