force-app/main/default/objects/Survey_Configuration__c/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey</label>
    <referenceTo>Survey__c</referenceTo>
    <relationshipLabel>Survey Configurations</relationshipLabel>
    <relationshipName>Survey_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>