force-app/main/default/objects/Survey_Configuration__c/fields/SurveyID__c.field-meta.xml
<CustomField>
    <fullName>SurveyID__c</fullName>
    <description>Feed Outbound - Survey__r.Name</description>
    <formula>Survey__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey ID</label>
    <type>Text</type>
</CustomField>