force-app/main/default/objects/Survey_Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>SurveyID__c</columns>
    <columns>NAME</columns>
    <columns>QuestionFromText__c</columns>
    <columns>AnswerText__c</columns>
    <columns>QuestionTo__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>FeedSend__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SurveyID__c</field>
        <operation>equals</operation>
        <value>76</value>
    </filters>
    <label>All</label>
</ListView>